selfhost/test/parser/accessor_error_None.out
Error at %FILE_NAME%:1:3
Unexpected token 'None', expected 'identifier':
  |  a.None.b
       ^